--- a/identidad.html
+++ b/identidad.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Identidad Hernaviana - Hernavia</title>
-<meta name="description" content="Descubre qué significa ser parte de Hernavia y el valor de nuestra identidad cultural.">
-<link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
-<link rel="preload" href="estilo.css" as="style">
-<link rel="stylesheet" href="estilo.css">
-<link rel="canonical" href="https://hernavia.github.io/Hernavia/identidad.html">
-<meta name="robots" content="index, follow">
-<meta name="author" content="Proyecto Hernavia">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Identidad Hernaviana</title>
+  <meta name="description" content="Descubre qué significa ser parte de Hernavia y el valor de nuestra identidad cultural.">
+  <meta name="theme-color" content="#ffffff">
+  <meta name="keywords" content="Hernavia, identidad, comunidad, cultura, valores, sostenibilidad, sociedad, creatividad, naturaleza, paz, innovación">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
+  <link rel="preload" href="estilo.css" as="style">
+  <link rel="stylesheet" href="estilo.css">
+  <link rel="canonical" href="https://hernavia.github.io/Hernavia/identidad.html">
+  <meta name="robots" content="index, follow">
+  <meta name="author" content="Proyecto Hernavia">
+  <link rel="manifest" href="manifest.json">
 </head>
+
 <body>
 
 <header>
