--- a/sugerencias.html
+++ b/sugerencias.html
@@ -5,34 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sugerencias - Hernavia</title>
   <meta name="description" content="Envía tus ideas y sugerencias para mejorar Hernavia. Participa activamente en este proyecto cultural.">
+  <meta name="theme-color" content="#ffffff">
+  <meta name="keywords" content="Hernavia, sugerencias, ideas, comunidad, participación, creatividad, proyectos, cultura, innovación">
   <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
-
-  <!-- CSS general -->
   <link rel="preload" href="estilo.css" as="style">
   <link rel="stylesheet" href="estilo.css">
-
   <link rel="canonical" href="https://hernavia.github.io/Hernavia/sugerencias.html">
   <meta name="robots" content="index, follow">
   <meta name="author" content="Proyecto Hernavia">
-
-  <style>
-    /* Solo estilo para el botón de audio */
-    .audio-boton {
-      padding: 10px 15px;
-      background-color: #006A44;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      font-size: 0.9em;
-      font-weight: bold;
-      transition: background-color 0.3s ease;
-    }
-
-    .audio-boton:hover {
-      background-color: #004a2d;
-    }
-  </style>
+  <link rel="manifest" href="manifest.json">
 </head>
 
 <body>
