--- a/noticias.html
+++ b/noticias.html
@@ -36,7 +36,7 @@
   <div>
     <nav class="nav-comun">
       <a href="noticias.html" class="activo">Noticias</a>
-      <a href="noticias-random.html" style="color:#A4C639; border-color:#8AFF00;">Noticias Random</a>
+      <a href="noticias-random.html" style="color:#4efc03; border-color:#4efc03;">Noticias Random</a>
     </nav>
   </div>
 
