--- a/noticias.html
+++ b/noticias.html
@@ -36,7 +36,7 @@
   <div>
     <nav class="nav-comun">
       <a href="noticias.html" class="activo">Noticias</a>
-      <a href="noticias-random.html" style="color:#260333; border-color:#260333;">Noticias Random</a>
+      <a href="noticias-random.html" style="color:#0e024d; border-color:#0e024d;">Noticias Random</a>
     </nav>
   </div>
 
