--- a/noticias.html
+++ b/noticias.html
@@ -36,7 +36,7 @@
   <div>
     <nav class="nav-comun">
       <a href="noticias.html" class="activo">Noticias</a>
-      <a href="noticias-random.html" style="color:#05fab0; border-color:#05fab0;">Noticias Random</a>
+      <a href="noticias-random.html" style="color:#750404; border-color:#750404;">Noticias Random</a>
     </nav>
   </div>
 
