--- a/noticias-random.html
+++ b/noticias-random.html
@@ -30,17 +30,16 @@
     <a href="sugerencias.html">Sugerencias</a>
   </nav>
 
-  <!-- Botones para redirigir entre Noticias y Noticias Random -->
   <div style="text-align:center; margin:20px 0;">
     <nav class="nav-comun">
       <a href="noticias.html">Noticias</a>
-      <a href="noticias-random.html" class="activo" style="color:#ADFF2F; border-color:#ADFF2F;">Noticias Random</a>
+      <a href="noticias-random.html" class="activo" style="color:#750404; border-color:#750404;">Noticias Random</a>
     </nav>
   </div>
 
   <main>
-    <section class="texto-largo" style="border-left:8px solid #ADFF2F;">
-      <h2 style="color:#ADFF2F;">Noticias Casi Diarias</h2>
+    <section class="texto-largo" style="border-left:8px solid #750404;">
+      <h2 style="color:#750404;">Noticias Casi Diarias</h2>
 
       <details>
         <summary>World Bank eleva su proyección de crecimiento para Latinoamérica en 2026</summary>
@@ -57,8 +56,8 @@
       </details>
     </section>
 
-    <section class="texto-largo" style="border-left:8px solid #ADFF2F;">
-      <h2 style="color:#ADFF2F;">Curiosidades Random</h2>
+    <section class="texto-largo" style="border-left:8px solid #750404;">
+      <h2 style="color:#750404;">Curiosidades Random</h2>
 
       <details>
         <summary>La bioluminiscencia: organismos que producen luz propia</summary>
@@ -82,7 +81,7 @@
       </details>
     </section>
 
-    <section class="texto-largo" style="border-left:8px solid #ADFF2F;">
+    <section class="texto-largo" style="border-left:8px solid #750404;">
       <h2>Referencias</h2>
       <ol>
         <li id="ref1"><a href="https://www.reuters.com/world/americas/world-bank-lifts-latin-america-economic-growth-estimate-2026-2025-10-07/" target="_blank" rel="noopener noreferrer">Reuters — World Bank lifts Latin America growth estimate for 2026</a></li>
