--- a/noticias-random.html
+++ b/noticias-random.html
@@ -33,13 +33,13 @@
   <div style="text-align:center; margin:20px 0;">
     <nav class="nav-comun">
       <a href="noticias.html">Noticias</a>
-      <a href="noticias-random.html" class="activo" style="color:#750404; border-color:#750404;">Noticias Random</a>
+      <a href="noticias-random.html" class="activo">Noticias Random</a>
     </nav>
   </div>
 
   <main>
-    <section class="texto-largo" style="border-left:8px solid #750404;">
-      <h2 style="color:#750404;">Noticias Casi Diarias</h2>
+    <section class="texto-largo noticias-random">
+      <h2>Noticias Casi Diarias</h2>
 
       <details>
         <summary>World Bank eleva su proyección de crecimiento para Latinoamérica en 2026</summary>
@@ -54,10 +54,8 @@
           La empresa anunció una inversión de USD 1.000 millones en México durante los próximos cinco años para expandir operaciones y promover la adopción de inteligencia artificial. <sup><a href="#ref2">[2]</a></sup>
         </p>
       </details>
-    </section>
 
-    <section class="texto-largo" style="border-left:8px solid #750404;">
-      <h2 style="color:#750404;">Curiosidades Random</h2>
+      <h2>Curiosidades Random</h2>
 
       <details>
         <summary>La bioluminiscencia: organismos que producen luz propia</summary>
@@ -79,9 +77,7 @@
           El “gusano-tren” (<em>Railroad worm</em>) tiene órganos lumínicos que pueden emitir luz verde-amarilla a lo largo de su cuerpo y luz roja en la cabeza. <sup><a href="#ref5">[5]</a></sup>
         </p>
       </details>
-    </section>
 
-    <section class="texto-largo" style="border-left:8px solid #750404;">
       <h2>Referencias</h2>
       <ol>
         <li id="ref1"><a href="https://www.reuters.com/world/americas/world-bank-lifts-latin-america-economic-growth-estimate-2026-2025-10-07/" target="_blank" rel="noopener noreferrer">Reuters — World Bank lifts Latin America growth estimate for 2026</a></li>
