--- a/noticias-random.html
+++ b/noticias-random.html
@@ -54,7 +54,8 @@
           La empresa anunció una inversión de USD 1.000 millones en México durante los próximos cinco años para expandir operaciones y promover la adopción de inteligencia artificial. <sup><a href="#ref2">[2]</a></sup>
         </p>
       </details>
-
+    </section>
+     <section class="texto-largo noticias-random">
       <h2>Curiosidades Random</h2>
 
       <details>
@@ -77,7 +78,8 @@
           El “gusano-tren” (<em>Railroad worm</em>) tiene órganos lumínicos que pueden emitir luz verde-amarilla a lo largo de su cuerpo y luz roja en la cabeza. <sup><a href="#ref5">[5]</a></sup>
         </p>
       </details>
-
+       </section>
+ <section class="texto-largo noticias-random">
       <h2>Referencias</h2>
       <ol>
         <li id="ref1"><a href="https://www.reuters.com/world/americas/world-bank-lifts-latin-america-economic-growth-estimate-2026-2025-10-07/" target="_blank" rel="noopener noreferrer">Reuters — World Bank lifts Latin America growth estimate for 2026</a></li>
