--- a/noticias-random.html
+++ b/noticias-random.html
@@ -33,7 +33,7 @@
   <div style="text-align:center; margin:20px 0;">
     <nav class="nav-comun">
       <a href="noticias.html">Noticias</a>
-      <a href="noticias-random.html" class="activo">Noticias Random</a>
+      <a href="noticias-random.html" style="color:#750404; border-color:#750404;">Noticias Random</a>
     </nav>
   </div>
 
