--- a/carta.html
+++ b/carta.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Carta Fundacional - Hernavia</title>
   <meta name="description" content="Carta Fundacional de Hernavia: principios, estructura y objetivos que guían a la comunidad hernaviana.">
+  <meta name="keywords" content="hernavia, Carta fundacional, proyecto cultural, identidad, comunidad, sostenibilidad, creatividad, naturaleza, agua, paz, innovación">
   <meta name="theme-color" content="#ffffff">
   <meta name="author" content="Proyecto Hernavia">
   <meta name="robots" content="index, follow">
