--- a/leyes.html
+++ b/leyes.html
@@ -46,7 +46,7 @@
             <li>Daño a la comunidad o sus representantes.</li>
             <li>Decisión voluntaria: renuncia del ciudadano.</li>
         </ul>
-        <p><strong>Nota:</strong> El Arconte podrá dictaminar penalizaciones distintas sin implicar revocación directa.</p>
+        <p>Nota:El Arconte podrá dictaminar penalizaciones distintas sin implicar revocación directa.</p>
 
         <h2>Ley 2 – Aporte Obligatorio</h2>
         <p>Todo ciudadano deberá contribuir al bienestar de la comunidad mediante al menos uno de los siguientes medios:</p>
@@ -74,7 +74,7 @@
             <li>Iniciativas ciudadanas: propuestas por grupos de al menos tres ciudadanos y revisadas si alcanzan el 10 % de votos físicos.</li>
             <li>Asambleas representativas: convocadas con al menos el 10 % de votos físicos por vereda, junto al Arconte.</li>
         </ul>
-        <p><strong>Nota:</strong> Los menores tendrán derecho a medio voto.</p>
+        <p>Nota:Los menores tendrán derecho a medio voto.</p>
 
         <h2>Ley 5 – Regulación de Fondos y Recursos</h2>
         <ul>
@@ -92,7 +92,7 @@
         <h2>Ley 7 – Eliminación de Datos</h2>
         <p>Tras la revocación o renuncia, los datos personales serán eliminados en un plazo máximo de 30 días.</p>
 
-        <p><strong>Nota final:</strong> El Arconte podrá interpretar o modificar cualquier disposición de estas Leyes, siempre respetando los principios de respeto, paz, innovación y unión.</p>
+        <p>Nota final:El Arconte podrá interpretar o modificar cualquier disposición de estas Leyes, siempre respetando los principios de respeto, paz, innovación y unión.</p>
 
         <p style="text-align:center; margin-top:20px;">
             <a href="documentos.html" class="boton-hernavia">Volver a Documentos</a>
