--- a/noticias.html
+++ b/noticias.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Noticias de Hernavia</title>
-  <meta name="description" content="Noticias actualizadas sobre las actividades, ferias y eventos del proyecto Hernavia.">
+  <meta name="description" content="Noticias relevantes para Hernavia para que conozcas los hechos importantes.">
+  <meta name="keywords" content="Hernavia, comunidad, aportes, noticias, proyecto cultural, identidad, sostenibilidad, creatividad, naturaleza, paz, innovacion"
   <meta name="theme-color" content="#ffffff">
   <meta name="author" content="Proyecto Hernavia">
   <meta name="robots" content="index, follow">
@@ -43,10 +44,10 @@
   <main>
     <section class="texto-largo">
       <h2>Noticia 002 – Feria Empresarial en Gachancipá</h2>
-      <p>En el parque principal de Gachancipá se llevará a cabo una feria empresarial en una fecha aún por confirmar. Hernavia participará junto a <strong>Yukihert</strong> (pastelitos de yuca), presentando productos y compartiendo información sobre el proyecto.</p>
+      <p>En el parque principal de Gachancipá se llevará a cabo una feria empresarial en una fecha aún por confirmar. Hernavia participará junto a Yukihert (pastelitos de yuca), presentando productos y compartiendo información sobre el proyecto.</p>
       <p>Por el momento no hay más detalles confirmados.</p>
 
-      <p style="margin-top:20px;"><strong>Fuente:</strong> Comunicación interna de Hernavia, octubre de 2025.</p>
+      <p style="margin-top:20px;">Fuente: Comunicación interna de Hernavia, octubre de 2025.</p>
     </section>
   </main>
 
