--- a/noticias-random.html
+++ b/noticias-random.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Noticias Random - Hernavia</title>
-  <meta name="description" content="Noticias aleatorias, curiosidades y novedades casi diarias del proyecto Hernavia.">
+  <meta name="description" content="Noticias aleatorias, curiosidades y novedades casi diarias mundiales o en si de diversos temas.">
+  <meta name="keywords" content="Hernavia, comunidad, noticias random, noticias diarias, noticias importantes, proyecto cultural, identidad, sostenibilidad, creatividad, naturaleza, paz, innovacion"
   <meta name="theme-color" content="#ffffff">
   <meta name="author" content="Proyecto Hernavia">
   <meta name="robots" content="index, follow">
