--- a/carta.html
+++ b/carta.html
@@ -34,52 +34,83 @@
 
   <main>
     <section class="texto-largo">
-      <h2>Preámbulo</h2>
-      <p>Nosotros, el pueblo hernaviano, declaramos nuestra unión en una sola comunidad, guiados por los principios de respeto, justicia, innovación, progreso y fraternidad.</p>
+      <h2>Presentación de los Fundadores</h2>
+      <p>
+        Nosotros, los fundadores de Hernavia:
+        <ul>
+          <li>Hernán Coronado, Primer Arconte</li>
+        </ul>
+        nos unimos para crear una comunidad, identidad y proyecto que proteja y promueva los pilares fundamentales de Hernavia: naturaleza, agua, innovación, fraternidad, paz, así como sus variantes: cohesión, unión, verdad y seguridad.
+      </p>
 
-      <h3>Artículo 1 – Liderazgo</h3>
-      <p>El Arconte, cargo ejercido inicialmente por el fundador, será la máxima autoridad de Hernavia. Tendrá poder total para tomar decisiones administrativas, políticas y sociales mientras Hernavia consolida sus instituciones. El Arconte estará sujeto a esta Carta y deberá velar por la unión y el bienestar del pueblo hernaviano.</p>
+      <h2>Motivación y Propósito</h2>
+      <p>
+        Hernavia surge para construir un espacio donde la comunidad viva de manera armónica y responsable, guiada por los valores fundamentales y la protección de sus pilares. Nuestro propósito es organizar un camino para fortalecer la identidad hernaviana, proteger sus pilares y garantizar un entorno seguro, solidario y respetuoso con la naturaleza.
+      </p>
 
-      <h3>Artículo 2 – Principios Fundamentales</h3>
+      <h2>Misión</h2>
+      <p>
+        Buscar un ambiente de unidad, bienestar compartido y desarrollo sostenible, promoviendo la educación, innovación, cooperación, protección de los recursos naturales y diversas ramas que beneficien a la humanidad y a Hernavia.
+      </p>
+
+      <h2>Objetivos Iniciales</h2>
       <ol>
-        <li>Respeto y dignidad hacia los demás ciudadanos.</li>
-        <li>Respeto y cuidado de la naturaleza y los recursos comunes.</li>
-        <li>Participación activa en votaciones, asambleas o eventos convocados por Hernavia.</li>
-        <li>Solidaridad con los demás hernavianos en momentos de necesidad.</li>
-        <li>Búsqueda constante del conocimiento, la innovación y el progreso comunitario.</li>
-        <li>Fraternidad con otras naciones y culturas, manteniendo la identidad hernaviana.</li>
+        <li>Fortalecer la unidad y cohesión de la comunidad hernaviana.</li>
+        <li>Promover la educación cívica y cultural para todos los ciudadanos.</li>
+        <li>Impulsar iniciativas de innovación, creatividad y progreso comunitario.</li>
+        <li>Fomentar el respeto y cuidado de la naturaleza y los recursos comunes.</li>
+        <li>Mantener y difundir los símbolos y la identidad de Hernavia.</li>
       </ol>
 
-      <h3>Artículo 3 – Obligaciones de los Ciudadanos</h3>
+      <h2>Valores y Principios</h2>
+      <ul>
+        <li>Respeto y dignidad hacia cada ciudadano.</li>
+        <li>Cuidado del medio ambiente y los recursos comunes.</li>
+        <li>Participación activa en decisiones, asambleas y eventos.</li>
+        <li>Solidaridad con otros miembros de la comunidad.</li>
+        <li>Innovación y progreso constantes.</li>
+        <li>Fraternidad con otras naciones y culturas, sin perder la identidad hernaviana.</li>
+      </ul>
+
+      <h2>Compromisos de los Ciudadanos</h2>
       <ol>
-        <li>Aportar a la comunidad mediante trabajo, servicio, recursos o conocimiento útil.</li>
-        <li>Cumplir y respetar las decisiones del Arconte, como máxima autoridad provisional.</li>
+        <li>Contribuir a la comunidad.</li>
+        <li>Respetar las decisiones del Arconte mientras la autoridad sea provisional.</li>
         <li>Defender la paz y rechazar la violencia injustificada.</li>
-        <li>Contribuir al desarrollo económico y social de Hernavia mediante la productividad y el esfuerzo propio.</li>
-        <li>Respetar los símbolos de Hernavia como expresión de identidad común.</li>
-        <li>Proteger y apoyar a su comunidad en situaciones de crisis o emergencia.</li>
+        <li>Impulsar el desarrollo social mediante cooperación y esfuerzo conjunto.</li>
+        <li>Respetar los símbolos y la identidad de Hernavia.</li>
+        <li>Apoyar a la comunidad en momentos de crisis o emergencia.</li>
       </ol>
 
-      <h3>Artículo 4 – Identidad y Objetivos Iniciales</h3>
-      <p>La bandera y demás símbolos serán definidos por el Arconte y reconocidos provisionalmente como representación de la identidad hernaviana, con su lema “Paz, naturaleza, innovación” y la frase “Nacidos de un sueño, luchando por cumplirlo”.</p>
+      <h2>Arconte</h2>
+      <p>
+        El Arconte es la máxima autoridad provisional de Hernavia. Su poder total es transitorio, mientras se crean instituciones y se forman los recursos humanos necesarios para distribuir las responsabilidades de manera organizada y sostenible.
+      </p>
+      <p><strong>Responsabilidades del Arconte:</strong></p>
+      <ul>
+        <li>Guiar la comunidad y proteger sus pilares fundamentales.</li>
+        <li>Tomar decisiones administrativas, sociales y culturales, siempre en respeto a los valores de Hernavia.</li>
+        <li>Representar y cuidar la identidad y los símbolos de Hernavia.</li>
+        <li>Actuar con ética, transparencia y responsabilidad, promoviendo la participación y consenso ciudadano.</li>
+      </ul>
+      <p><strong>Duración del cargo:</strong> Provisional, hasta que Hernavia consolide instituciones y mecanismos de participación ciudadana más sólidos.</p>
+      <p><strong>Relación con la comunidad:</strong> Líder, guía y protector, actuando siempre en beneficio del colectivo, no de intereses individuales.</p>
 
-      <p>Los objetivos iniciales de Hernavia serán:</p>
-      <ol>
-        <li>Fortalecer la unión y crecimiento de la comunidad hernaviana.</li>
-        <li>Desarrollar una base económica autosuficiente, iniciando con la producción de alimentos y recursos propios.</li>
-        <li>Establecer mecanismos de organización interna simples pero efectivos bajo la guía del Arconte.</li>
-        <li>Promover la educación cívica, la innovación y el respeto a la naturaleza.</li>
-      </ol>
+      <h2>Carácter Provisional</h2>
+      <p>
+        Esta Carta es transitoria y podrá evolucionar a medida que Hernavia crezca. Futuras constituciones podrán incorporar la participación directa de toda la comunidad. Mientras tanto, todas las acciones se guían por esta Carta y los principios de Hernavia.
+      </p>
 
-      <h3>Artículo 5 – Carácter Transitorio</h3>
-      <p>Esta Carta es un documento provisional. Podrá ser modificada en el futuro a medida que Hernavia crezca y se fortalezca, por decisión del Arconte o mediante una futura Constitución establecida con la participación del pueblo. Toda acción deberá respetar esta Carta, las leyes de Hernavia que se promulguen posteriormente, y las leyes del país donde se encuentre el ciudadano.</p>
+      <h2>Símbolos de Hernavia</h2>
+      <p><strong>Bandera:</strong> Representa la paz, la naturaleza, la innovación y la fraternidad con Colombia.</p>
+      <p><strong>Primer Arconte:</strong> Hernán Coronado</p>
 
-      <h3>Artículo 6 – Símbolos</h3>
-      <h4>Bandera</h4>
-      <img src="img/bandera.png" alt="Bandera de Hernavia" class="bandera">
-      <p>La bandera de Hernavia simboliza la naturaleza, la innovación, la paz y la fraternidad con Colombia.</p>
-
-      <p><strong>Arconte fundador:</strong> Hernán Coronado.</p>
+      <h2>Cierre y Firma</h2>
+      <p>
+        Con esta Carta Fundacional, declaramos oficialmente la creación de Hernavia, nuestra comunidad y nación provisional, guiada por los principios aquí establecidos.
+      </p>
+      <p><strong>Firmas:</strong></p>
+      <p>_______________________<br>Hernán Coronado – Primer Arconte</p>
 
       <p style="text-align:center; margin-top:25px;">
         <a href="documentos.html" class="boton-hernavia">Volver a Documentos</a>
