--- a/leyes.html
+++ b/leyes.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leyes Transitorias de Hernavia</title>
-    <meta name="description" content="Consulta las Leyes Transitorias de Hernavia, para entender tes derechos deberes y demas como ciudadano.">
+    <meta name="description" content="Consulta las Leyes Transitorias de Hernavia, para entender tus derechos, deberes y demás como ciudadano.">
     <meta name="theme-color" content="#ffffff">
-    <meta name="keywords" content="Hernavia, leyes transitorias, ciudadanía, comunidad, aportes, organización, proyecto cultural, identidad, sostenibilidad, creatividad, naturaleza, paz, innovacion">
+    <meta name="keywords" content="Hernavia, leyes transitorias, ciudadanía, comunidad, aportes, organización, proyecto cultural, identidad, sostenibilidad, creatividad, naturaleza, paz, innovación">
     <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
     <link rel="preload" href="estilo.css" as="style">
     <link rel="stylesheet" href="estilo.css">
@@ -15,7 +15,6 @@
     <meta name="author" content="Proyecto Hernavia">
     <link rel="manifest" href="manifest.json">
 </head>
-
 
 <body>
 
@@ -35,64 +34,80 @@
 
 <main>
     <section class="texto-largo">
-        <h2>Ley 1 – Revocación de Ciudadanía Hernaviana</h2>
-        <p>Un ciudadano podrá perder su ciudadanía, de forma temporal o definitiva, si incurre en alguno de los siguientes casos:</p>
+        <h2>Ley 1 – Ciudadanía Hernaviana</h2>
+<ul>
+    <li>Todo ciudadano de Hernavia es reconocido como miembro activo de la comunidad.</li>
+    <li>La ciudadanía puede perderse temporal o definitivamente en los siguientes casos:
         <ul>
             <li>Traición a Hernavia: colaborar con intereses que busquen dañar a Hernavia o destruir sus principios.</li>
-            <li>Violencia grave contra otros hernavianos.</li>
-            <li>Incumplimiento reiterado de deberes.</li>
-            <li>Engaño durante el proceso de registro.</li>
-            <li>Actos ilegales o contrarios a los principios hernavianos.</li>
-            <li>Daño a la comunidad o sus representantes.</li>
-            <li>Decisión voluntaria: renuncia del ciudadano.</li>
+            <li>Violencia grave contra otros hernavianos o acciones que pongan en riesgo la seguridad de la comunidad.</li>
+            <li>Desinterés prolongado o reiterado en participar en actividades, votaciones o decisiones comunitarias, sin justificación válida.</li>
+            <li>Engaño o falsificación en registros de identidad o documentación de ciudadanía.</li>
+            <li>Actos ilegales según la normativa vigente de la comunidad.</li>
+            <li>Daño directo a bienes o símbolos de Hernavia.</li>
+            <li>Solicitud voluntaria de renuncia a la ciudadanía.</li>
         </ul>
-        <p>Nota:El Arconte podrá dictaminar penalizaciones distintas sin implicar revocación directa.</p>
+    </li>
+</ul>
+<p>Comentario: La inactividad o falta de interés se evaluará conforme a la Ley 5.</p>
 
-        <h2>Ley 2 – Aporte Obligatorio</h2>
-        <p>Todo ciudadano deberá contribuir al bienestar de la comunidad mediante al menos uno de los siguientes medios:</p>
+
+        <h2>Ley 2 – Penalizaciones</h2>
         <ul>
-            <li>Trabajo comunitario.</li>
-            <li>Aporte de conocimientos.</li>
-            <li>Aporte de recursos.</li>
-            <li>Servicio comunitario.</li>
+            <li>Suspensión temporal de participación en actividades.</li>
+            <li>Exclusión temporal de servicios comunitarios.</li>
+            <li>Revocación temporal o definitiva de ciudadanía (solo en casos extremos, según Ley 1).</li>
+            <li>Penalización por daño a símbolos nacionales.</li>
         </ul>
+        <p>Comentario: En conflictos internos se aplicarán <strong>MASC</strong> (Métodos Alternativos de Solución de Conflictos: mediación, arbitraje, solución comunitaria).</p>
 
-        <h2>Ley 3 – Penalizaciones</h2>
+        <h2>Ley 3 – Participación Ciudadana</h2>
         <ul>
-            <li>Aumento del aporte mínimo.</li>
-            <li>Multa económica o equivalente en recursos.</li>
-            <li>Tareas adicionales obligatorias.</li>
-            <li>Suspensión temporal de actividades.</li>
-            <li>Exclusión de servicios comunitarios.</li>
-            <li>Revocación temporal o definitiva de la ciudadanía.</li>
-            <li>Penalización especial por daños a los símbolos de Hernavia.</li>
+            <li>Votaciones comunitarias convocadas por el Arconte.</li>
+            <li>Iniciativas ciudadanas: propuestas por grupos de al menos tres ciudadanos, revisadas si alcanzan el 10% de la comunidad.</li>
+            <li>Asambleas representativas: cada sector o vereda puede elegir representantes, con al menos 10% de votos físicos, junto al Arconte.</li>
+            <li>Solicitud de votaciones sobre rendición de cuentas del Arconte y otros temas comunitarios, incluso triviales.</li>
         </ul>
+        <p>Nota: Los menores de edad podrán participar con medio voto.</p>
 
-        <h2>Ley 4 – Participación Ciudadana</h2>
+        <h2>Ley 4 – Regulación de Fondos y Recursos</h2>
         <ul>
-            <li>Votaciones comunitarias con voto igualitario.</li>
-            <li>Iniciativas ciudadanas: propuestas por grupos de al menos tres ciudadanos y revisadas si alcanzan el 10 % de votos físicos.</li>
-            <li>Asambleas representativas: convocadas con al menos el 10 % de votos físicos por vereda, junto al Arconte.</li>
+            <li>Los aportes económicos o materiales serán administrados temporalmente por el Arconte.</li>
+            <li>El Arconte rendirá cuentas al menos una vez al año o cuando la comunidad lo solicite mediante votación.</li>
+            <li>Objetivo: garantizar transparencia y buen uso de recursos mientras se desarrollan estructuras formales.</li>
         </ul>
-        <p>Nota:Los menores tendrán derecho a medio voto.</p>
 
-        <h2>Ley 5 – Regulación de Fondos y Recursos</h2>
+        <h2>Ley 5 – Inactividad y Aporte Recomendado</h2>
+        <p>Se considera inactividad cuando un ciudadano no participa en actividades, votaciones o realiza aportes recomendados durante dos meses consecutivos.</p>
         <ul>
-            <li>Los aportes serán administrados por el Arconte.</li>
-            <li>La rendición de cuentas deberá realizarse al menos una vez al año o cuando lo solicite la comunidad.</li>
+            <li>Tras aviso, al tercer mes se suspende temporalmente la ciudadanía; puede recuperarse participando en cualquier actividad oficial durante el mes siguiente.</li>
+            <li>Tras tercera suspensión injustificada, la ciudadanía podrá perderse por seis meses, según Ley 1.</li>
+            <li>La inactividad puede justificarse por motivos válidos y documentados.</li>
+            <li>Aportes recomendados: trabajo comunitario, conocimiento, recursos, servicios comunitarios; la participación se considerará para planificación de roles y evaluación de ciudadanía.</li>
         </ul>
 
-        <h2>Ley 6 – Inactividad de Ciudadanos Hernavianos</h2>
-        <p>Inactividad por dos meses: aviso de estatus.  
-        Al tercer mes: suspensión temporal.  
-        La ciudadanía será recuperable participando en cualquier actividad oficial dentro del mes siguiente.  
-        Tras una tercera suspensión injustificada, se perderá la ciudadanía por seis meses.  
-        Las ausencias podrán justificarse por motivos válidos.</p>
+        <h2>Ley 6 – Protección de la Naturaleza, Agua y Proyectos de Hernavia</h2>
+        <ul>
+            <li>Respeto y cuidado de cualquier recurso natural de Hernavia y en general: bosques, áreas verdes, ríos, fauna, flora y demás recursos comunes.</li>
+            <li>Prohibido causar daño intencional a recursos naturales o bienes comunes.</li>
+            <li>Proyectos culturales, educativos o ecológicos deben proteger y promover los pilares fundamentales: naturaleza, agua, innovación, paz y fraternidad.</li>
+            <li>Los símbolos de Hernavia deberán respetarse en todas las actividades y proyectos.</li>
+        </ul>
 
-        <h2>Ley 7 – Eliminación de Datos</h2>
-        <p>Tras la revocación o renuncia, los datos personales serán eliminados en un plazo máximo de 30 días.</p>
+        <h2>Ley 7 – Protección de Datos</h2>
+        <ul>
+            <li>Tras la revocación o renuncia, los datos personales se eliminarán en un plazo máximo de 30 días.</li>
+            <li>El número de identificación quedará disponible para nuevos registros.</li>
+        </ul>
 
-        <p>Nota final:El Arconte podrá interpretar o modificar cualquier disposición de estas Leyes, siempre respetando los principios de respeto, paz, innovación y unión.</p>
+        <h2>Ley 8 – Admisión de Nuevos Ciudadanos</h2>
+        <ul>
+            <li>Cualquier persona interesada puede solicitar ser ciudadano hernaviano, cumpliendo criterios de respeto y alineamiento con los valores de Hernavia.</li>
+            <li>La admisión será aprobada por el Arconte y, si existen ramas administrativas activas, por mayoría simple de las mismas.</li>
+            <li>Los menores de edad podrán unirse con autorización de sus tutores.</li>
+        </ul>
+
+        <p>Comentario final: Cambios en las leyes podrán ser propuestos por el Arconte o por al menos el 40% de la rama administrativa correspondiente.</p>
 
         <p style="text-align:center; margin-top:20px;">
             <a href="documentos.html" class="boton-hernavia">Volver a Documentos</a>
