--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <main>
     <section id="que-es" class="texto-largo">
       <h2>¿Qué es Hernavia?</h2>
-      <p>Hernavia es un espacio donde la creatividad y la unión se convierten en identidad. Cada persona puede aportar ideas, ayudar a construir comunidad y contribuir a un futuro más sostenible.</p>
+      <p>Hernavia es un proyecto identitario que busca un dar un espacio a la innovacion cuidar la naturaleza y hacer actos que beneficien a la comunidad basado en sus principios.</p>
       <p>Se fundamenta en el respeto y cuidado de la naturaleza, la protección de los animales, el reciclaje, la recolección de basura, el cuidado del agua y la promoción de fines ambientales.</p>
       <p>Además, Hernavia impulsa la innovación y apoya proyectos que fomentan un espíritu creativo para resolver los desafíos actuales.</p>
       <p>En resumen, la identidad hernaviana se sostiene sobre tres pilares: naturaleza, paz e innovación.</p>
@@ -117,4 +117,5 @@
   </script>
 </body>
 </html>
+
 
