--- a/comounirse.html
+++ b/comounirse.html
@@ -104,23 +104,44 @@
   
 <div id="modal-politica" class="modal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.6); z-index:1000; justify-content:center; align-items:center;">
   <div class="contenido" style="background:white; padding:20px; border-radius:10px; max-width:600px; max-height:80vh; overflow-y:auto;">
-    <h2>Política de Seguridad de Datos</h2>
+    <h2>Política de Privacidad y Tratamiento de Datos</h2>
     <p>
-      En Hernavia, la protección de tus datos es prioritaria.  
-      Los siguientes datos son obligatorios: <strong>nombre completo, fecha de nacimiento, país/departamento y correo electrónico.</strong>
+      En la <strong>Nación Simbólica de Hernavia</strong> protegemos tu información personal conforme a los principios de respeto, seguridad y confidencialidad.
     </p>
-    <p>Puedes opcionalmente proporcionar tu municipio y ocupación.</p>
+
+    <h3>1. Datos recolectados</h3>
     <p>
-      Si decides retirarte, tus datos se conservarán hasta por <strong>2 meses</strong> para fines administrativos, 
-      luego serán eliminados de manera segura.
+      El formulario solicita únicamente los datos necesarios para identificarte y contactarte:  
+      <strong>nombre completo, fecha de nacimiento, país/departamento y correo electrónico</strong>.  
+      Los campos de <em>municipio</em> y <em>ocupación</em> son opcionales.
     </p>
+
+    <h3>2. Finalidad</h3>
     <p>
-      Puedes solicitar en cualquier momento la <strong>eliminación de tus datos opcionales</strong> o la <strong>corrección de información</strong> 
-      enviando un mensaje al equipo de Hernavia.
+      Los datos se usan <strong>exclusivamente para fines internos</strong> del proyecto Hernavia: gestión de solicitudes, registro ciudadano y comunicación institucional.  
+      No se comparten, venden ni divulgan a terceros.
     </p>
+
+    <h3>3. Conservación y eliminación</h3>
+    <p>
+      Si decides retirarte o anular tu solicitud, tus datos se conservarán por un máximo de <strong>2 meses</strong> con fines administrativos, después serán eliminados de manera segura.
+    </p>
+
+    <h3>4. Derechos del participante</h3>
+    <p>
+      Puedes solicitar en cualquier momento la <strong>corrección, actualización o eliminación</strong> de tus datos opcionales enviando un mensaje al equipo de Hernavia.  
+      Los datos esenciales (nombre, fecha de nacimiento, correo y país/departamento) se conservarán únicamente mientras mantengas tu condición de solicitante o ciudadano.
+    </p>
+
+    <h3>5. Aceptación</h3>
+    <p>
+      Al marcar la casilla de aceptación y enviar el formulario, confirmas que has leído y aceptado esta política de privacidad.
+    </p>
+
     <button id="cerrar-politica" class="faq-toggle">Cerrar</button>
   </div>
 </div>
+
 
 <footer>
   &copy; 2025 Hernavia — Proyecto Cultural
