--- a/comounirse.html
+++ b/comounirse.html
@@ -124,7 +124,7 @@
 
     <h3>3. Conservación y eliminación</h3>
     <p>
-      Si decides retirarte o anular tu solicitud, tus datos se conservarán por un máximo de <strong>2 meses</strong> con fines administrativos, después serán eliminados de manera segura.
+      Si decides anular tu solicitud, tus datos se conservarán por un máximo de <strong>un mes</strong> con fines administrativos, después serán eliminados de manera segura.
     </p>
 
     <h3>4. Derechos del participante</h3>
