--- a/noticias-random.html
+++ b/noticias-random.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" >
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Noticias Random - Hernavia</title>
-  <meta name="description" content="Noticias aleatorias, curiosidades y novedades casi diarias mundiales o en si de diversos temas.">
-  <meta name="keywords" content="Hernavia, comunidad, noticias random, noticias diarias, noticias importantes, proyecto cultural, identidad, sostenibilidad, creatividad, naturaleza, paz, innovacion"
+  <meta name="description" content="Noticias aleatorias y curiosidades con fuentes verificadas. Actualizado con noticias recientes (octubre 2025).">
+  <meta name="keywords" content="Hernavia, noticias, noticias random, Latinoamérica, ciencia, curiosidades">
   <meta name="theme-color" content="#ffffff">
   <meta name="author" content="Proyecto Hernavia">
   <meta name="robots" content="index, follow">
@@ -25,69 +25,73 @@
     <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
     <a href="documentos.html">Documentos</a>
     <a href="noticias.html">Noticias</a>
+    <a href="noticias-random.html" class="active">Noticias Random</a>
     <a href="consultas.html">Consultas</a>
     <a href="simbolos.html">Símbolos</a>
     <a href="comounirse.html">¿Cómo unirse?</a>
     <a href="sugerencias.html">Sugerencias</a>
   </nav>
 
-  <div style="text-align:center; margin:20px 0;">
-    <nav class="nav-comun">
-      <a href="noticias.html">Noticias</a>
-      <a href="noticias-random.html" style="color:#750404; border-color:#750404;">Noticias Random</a>
-    </nav>
-  </div>
-
   <main>
-    <section class="texto-largo noticias-random">
-      <h2>Noticias Casi Diarias</h2>
+    <section class="texto-largo noticias-random" aria-labelledby="recientes">
+      <h2 id="recientes">Últimas noticias (selección)</h2>
 
       <details>
-        <summary>World Bank eleva su proyección de crecimiento para Latinoamérica en 2026</summary>
+        <summary>Premio Nobel de la Paz 2025: reacciones por el galardón a María Corina Machado</summary>
         <p>
-          El Banco Mundial ajustó al alza su proyección de crecimiento para América Latina y el Caribe en 2026, estimando ahora un 2,5 % frente al 2,4 % anterior. <sup><a href="#ref1">[1]</a></sup>
+          La entrega del Premio Nobel de la Paz 2025 a la líder opositora venezolana María Corina Machado generó repercusiones políticas y movilizaciones de la diáspora. La noticia ha sido reportada por agencias internacionales que cubren el impacto político en la región.
+        </p>
+        <p class="meta-small">Fuente: Reuters — 10 oct 2025. <a href="https://www.reuters.com/world/americas/nobel-peace-prize-rallies-venezuelas-opposition-deepens-maduros-isolation-2025-10-10/?utm_source=chatgpt.com" target="_blank" rel="noopener noreferrer">leer artículo</a></p>
+      </details>
+
+      <details>
+        <summary>World Bank actualiza al alza la previsión de crecimiento para Latinoamérica en 2026</summary>
+        <p>
+          El Banco Mundial ajustó su estimación de crecimiento para América Latina y el Caribe en 2026, elevando ligeramente su previsión. Esto refleja señales de recuperación en algunos sectores y ajustes en proyecciones macroeconómicas regionales.
+        </p>
+        <p class="meta-small">Fuente: Reuters — 7 oct 2025. <a href="https://www.reuters.com/world/americas/world-bank-lifts-latin-america-economic-growth-estimate-2026-2025-10-07/" target="_blank" rel="noopener noreferrer">leer artículo</a></p>
+      </details>
+
+      <details>
+        <summary>Premio Nobel de Química 2025: avances en marcos metálico-orgánicos (MOFs)</summary>
+        <p>
+          El Nobel de Química 2025 fue otorgado por trabajos sobre marcos metálico-orgánicos (MOFs), materiales prometedores para capturar CO₂ y extraer agua del ambiente, con aplicaciones clave en clima y abastecimiento de agua.
+        </p>
+        <p class="meta-small">Fuente: AP News — cobertura 2025. <a href="https://apnews.com/article/87dcb74eb01e3d5ba8efc32832e51ef6?utm_source=chatgpt.com" target="_blank" rel="noopener noreferrer">leer artículo</a></p>
+      </details>
+    </section>
+
+    <section class="texto-largo noticias-random" aria-labelledby="curiosidades">
+      <h2 id="curiosidades">Curiosidades y ciencia</h2>
+
+      <details>
+        <summary>Pyrocystis fusiformis: dinoflagelado bioluminiscente</summary>
+        <p>
+          <em>Pyrocystis fusiformis</em> es un dinoflagelado marino conocido por producir destellos de luz (bioluminiscencia) cuando el agua es perturbada; un fenómeno usado en divulgación científica y aulas para demostrar reacciones químicas y ecológicas.
         </p>
       </details>
 
       <details>
-        <summary>Salesforce invertirá mil millones de dólares en México para impulsar IA</summary>
+        <summary>Marcos metálico-orgánicos (MOFs): más allá del CO₂</summary>
         <p>
-          La empresa anunció una inversión de USD 1.000 millones en México durante los próximos cinco años para expandir operaciones y promover la adopción de inteligencia artificial. <sup><a href="#ref2">[2]</a></sup>
+          Los MOFs son estructuras con poros capaces de atrapar gases y de capturar humedad. Investigaciones recientes exploran su uso para purificar aire industrial, capturar contaminantes y generar fuentes de agua en ambientes secos.
+        </p>
+      </details>
+
+      <details>
+        <summary>Nuevo satélite (prov.) alrededor de Urano detectado por Webb</summary>
+        <p>
+          Observaciones recientes con el telescopio espacial James Webb han identificado candidatos a nuevos satélites de Urano; la confirmación requiere seguimiento y observaciones independientes.
         </p>
       </details>
     </section>
-     <section class="texto-largo noticias-random">
-      <h2>Curiosidades Random</h2>
 
-      <details>
-        <summary>La bioluminiscencia: organismos que producen luz propia</summary>
-        <p>
-          Muchos organismos marinos, como ciertos peces, medusas y bacterias, tienen la capacidad de producir luz mediante reacciones químicas internas. <sup><a href="#ref3">[3]</a></sup>
-        </p>
-      </details>
-
-      <details>
-        <summary><em>Pyrocystis fusiformis</em>: dinoflagelado que brilla al ser perturbado</summary>
-        <p>
-          <em>Pyrocystis fusiformis</em> es un dinoflagelado marino que emite luz (bioluminiscencia) cuando es agitado o perturbado. <sup><a href="#ref4">[4]</a></sup>
-        </p>
-      </details>
-
-      <details>
-        <summary>“Railroad worm”: gusano que emite diferentes colores de luz</summary>
-        <p>
-          El “gusano-tren” (<em>Railroad worm</em>) tiene órganos lumínicos que pueden emitir luz verde-amarilla a lo largo de su cuerpo y luz roja en la cabeza. <sup><a href="#ref5">[5]</a></sup>
-        </p>
-      </details>
-       </section>
- <section class="texto-largo noticias-random">
-      <h2>Referencias</h2>
+    <section class="texto-largo fuentes" aria-labelledby="referencias">
+      <h2 id="referencias">Referencias / Lecturas originales</h2>
       <ol>
-        <li id="ref1"><a href="https://www.reuters.com/world/americas/world-bank-lifts-latin-america-economic-growth-estimate-2026-2025-10-07/" target="_blank" rel="noopener noreferrer">Reuters — World Bank lifts Latin America growth estimate for 2026</a></li>
-        <li id="ref2"><a href="https://www.reuters.com/world/americas/salesforce-spend-1-billion-mexico-over-next-five-years-drive-ai-adoption-2025-10-08/" target="_blank" rel="noopener noreferrer">Reuters — Salesforce to spend $1 billion in Mexico over next five years</a></li>
-        <li id="ref3"><a href="https://education.nationalgeographic.org/resource/bioluminescence/" target="_blank" rel="noopener noreferrer">National Geographic — Bioluminiscencia (explicación científica)</a></li>
-        <li id="ref4"><a href="https://en.wikipedia.org/wiki/Pyrocystis_fusiformis" target="_blank" rel="noopener noreferrer">Wikipedia — Pyrocystis fusiformis</a></li>
-        <li id="ref5"><a href="https://en.wikipedia.org/wiki/Railroad_worm" target="_blank" rel="noopener noreferrer">Wikipedia — Railroad worm</a></li>
+        <li><a href="https://www.reuters.com/world/americas/nobel-peace-prize-rallies-venezuelas-opposition-deepens-maduros-isolation-2025-10-10/?utm_source=chatgpt.com" target="_blank" rel="noopener noreferrer">Reuters — Nobel Peace Prize rallies Venezuela's opposition, deepens Maduro's isolation (10 oct 2025)</a></li>
+        <li><a href="https://www.reuters.com/world/americas/world-bank-lifts-latin-america-economic-growth-estimate-2026-2025-10-07/" target="_blank" rel="noopener noreferrer">Reuters — World Bank lifts Latin America growth estimate for 2026 (7 oct 2025)</a></li>
+        <li><a href="https://apnews.com/article/87dcb74eb01e3d5ba8efc32832e51ef6?utm_source=chatgpt.com" target="_blank" rel="noopener noreferrer">AP News — Nobel Prize in chemistry goes to discovery that could trap CO₂ and bring water to deserts (cobertura 2025)</a></li>
       </ol>
     </section>
   </main>
