--- a/noticias-random.html
+++ b/noticias-random.html
@@ -85,8 +85,8 @@
         </p>
       </details>
     </section>
-
-    <section class="texto-largo fuentes" aria-labelledby="referencias">
+    
+ <section class="texto-largo noticias-random" aria-labelledby="recientes">
       <h2 id="referencias">Referencias / Lecturas originales</h2>
       <ol>
         <li><a href="https://www.reuters.com/world/americas/nobel-peace-prize-rallies-venezuelas-opposition-deepens-maduros-isolation-2025-10-10/?utm_source=chatgpt.com" target="_blank" rel="noopener noreferrer">Reuters — Nobel Peace Prize rallies Venezuela's opposition, deepens Maduro's isolation (10 oct 2025)</a></li>
