--- a/carta.html
+++ b/carta.html
@@ -32,16 +32,16 @@
     <a href="sugerencias.html">Sugerencias</a>
   </nav>
 
-  <main>
-    <section class="texto-largo">
-      <h2>Presentación de los Fundadores</h2>
-      <p>
-        Nosotros, los fundadores de Hernavia:
-        <ul>
-          <li>Hernán Coronado, Primer Arconte</li>
-        </ul>
-        nos unimos para crear una comunidad, identidad y proyecto que proteja y promueva los pilares fundamentales de Hernavia: naturaleza, agua, innovación, fraternidad, paz, así como sus variantes: cohesión, unión, verdad y seguridad.
-      </p>
+<section class="texto-largo">
+  <h2>Presentación de los Fundadores</h2>
+  <p>Nosotros, los fundadores de Hernavia:</p>
+  <ul>
+    <li>Hernán Coronado, Primer Arconte</li>
+  </ul>
+  <p>
+    Nos unimos para crear una comunidad, identidad y proyecto que proteja y promueva los pilares fundamentales de Hernavia: naturaleza, agua, innovación, fraternidad, paz, así como sus variantes: cohesión, unión, verdad y seguridad.
+  </p>
+</section>
 
       <h2>Motivación y Propósito</h2>
       <p>
