--- a/carta.html
+++ b/carta.html
@@ -41,7 +41,6 @@
   <p>
     Nos unimos para crear una comunidad, identidad y proyecto que proteja y promueva los pilares fundamentales de Hernavia: naturaleza, agua, innovación, fraternidad, paz, así como sus variantes: cohesión, unión, verdad y seguridad.
   </p>
-</section>
 
       <h2>Motivación y Propósito</h2>
       <p>
@@ -102,15 +101,11 @@
       </p>
 
       <h2>Símbolos de Hernavia</h2>
-      <p><strong>Bandera:</strong> Representa la paz, la naturaleza, la innovación y la fraternidad con Colombia.</p>
+      <p><strong>Bandera:</strong>  <img src="img/bandera.png" alt="Bandera de Hernavia" class="bandera" width="300" height="200" loading="lazy">
+      Representa la paz, la naturaleza, la innovación y la fraternidad con Colombia.</p>
       <p><strong>Primer Arconte:</strong> Hernán Coronado</p>
+</section>
 
-      <h2>Cierre y Firma</h2>
-      <p>
-        Con esta Carta Fundacional, declaramos oficialmente la creación de Hernavia, nuestra comunidad y nación provisional, guiada por los principios aquí establecidos.
-      </p>
-      <p><strong>Firmas:</strong></p>
-      <p>_______________________<br>Hernán Coronado – Primer Arconte</p>
 
       <p style="text-align:center; margin-top:25px;">
         <a href="documentos.html" class="boton-hernavia">Volver a Documentos</a>
