--- a/carta.html
+++ b/carta.html
@@ -22,7 +22,7 @@
     <h1>Carta Fundacional de Hernavia</h1>
   </header>
 
-  <nav class="nav-comun">
+  <nav class="nav-comun" aria-label="Navegación principal">
     <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
     <a href="documentos.html">Documentos</a>
     <a href="noticias.html">Noticias</a>
@@ -32,15 +32,16 @@
     <a href="sugerencias.html">Sugerencias</a>
   </nav>
 
-<section class="texto-largo">
-  <h2>Presentación de los Fundadores</h2>
-  <p>Nosotros, los fundadores de Hernavia:</p>
-  <ul>
-    <li>Hernán Coronado, Primer Arconte</li>
-  </ul>
-  <p>
-    Nos unimos para crear una comunidad, identidad y proyecto que proteja y promueva los pilares fundamentales de Hernavia: naturaleza, agua, innovación, fraternidad, paz, así como sus variantes: cohesión, unión, verdad y seguridad.
-  </p>
+  <main>
+    <section class="texto-largo">
+      <h2>Presentación de los Fundadores</h2>
+      <p>Nosotros, los fundadores de Hernavia:</p>
+      <ul>
+        <li>Hernán Coronado, Primer Arconte</li>
+      </ul>
+      <p>
+        Nos unimos para crear una comunidad, identidad y proyecto que proteja y promueva los pilares fundamentales de Hernavia: naturaleza, agua, innovación, fraternidad, paz, así como sus variantes: cohesión, unión, verdad y seguridad.
+      </p>
 
       <h2>Motivación y Propósito</h2>
       <p>
@@ -101,11 +102,12 @@
       </p>
 
       <h2>Símbolos de Hernavia</h2>
-      <p><strong>Bandera:</strong>  <img src="img/bandera.png" alt="Bandera de Hernavia" class="bandera" width="300" height="200" loading="lazy">
-      Representa la paz, la naturaleza, la innovación y la fraternidad con Colombia.</p>
+      <p>
+        <strong>Bandera:</strong>
+        <img src="img/bandera.png" alt="Bandera de Hernavia" class="bandera" width="300" height="200" loading="lazy">
+        Representa la paz, la naturaleza, la innovación y la fraternidad con Colombia.
+      </p>
       <p><strong>Primer Arconte:</strong> Hernán Coronado</p>
-</section>
-
 
       <p style="text-align:center; margin-top:25px;">
         <a href="documentos.html" class="boton-hernavia">Volver a Documentos</a>
